# jukebox

./: README.md  pyproject.toml
.github/workflows/: python.yml  release.yml
discstore/: app.py  command_handlers.py  commands.py  di_container.py
discstore/adapters/inbound/: api_controller.py  cli_controller.py  config.py  ui_controller.py
discstore/adapters/inbound/ui_pages/: library.py  settings.py
jukebox/: app.py  di_container.py
jukebox/adapters/outbound/: sonos_discovery_adapter.py
jukebox/adapters/outbound/players/: sonos_player_adapter.py
jukebox/admin/: __init__.py  app.py  cli_presentation.py  command_handlers.py  commands.py  di_container.py  services.py
jukebox/settings/: __init__.py  change_metadata.py  definitions.py  entities.py  file_settings_repository.py  profiles.py  resolve.py  runtime_builders.py  runtime_resolver.py  runtime_validation.py  selected_sonos_group_repository.py  sonos_runtime.py  timing_validation.py  validation_rules.py  value_providers.py
jukebox/sonos/: __init__.py  discovery.py  selection.py  service.py
scripts/: ralph.py  ralph_review_output_schema.json
tests/discstore/: test_command_handlers.py  test_di_container.py  test_discstore_app.py
tests/discstore/adapters/inbound/: test_api_controller.py  test_config.py  test_ui_controller.py
tests/jukebox/: test_jukebox_app.py  test_jukebox_di_container.py
tests/jukebox/adapters/inbound/: test_config.py
tests/jukebox/adapters/outbound/: test_sonos_discovery_adapter.py
tests/jukebox/adapters/outbound/players/: test_sonos_player_adapters.py
tests/jukebox/admin/: test_app.py  test_cli_presentation.py  test_command_handlers.py  test_di_container.py
tests/jukebox/settings/: _helpers.py  test_definitions.py  test_environment_settings_overrides.py  test_file_settings_repository.py  test_resolve.py  test_runtime_validation.py  test_selected_sonos_group_repository.py  test_settings_service_mutation_validation.py  test_settings_service_mutations.py  test_settings_service_runtime_resolution.py  test_settings_service_sonos_resolution.py  test_sonos_runtime.py  test_validation_rules.py
tests/jukebox/sonos/: test_selection.py
tests/scripts/: test_ralph.py
