[project]
name = "gukebox"
version = "1.0.0.dev4"
description = "A Jukebox to play music on speakers using 'CD' with NFC tag"
authors = [{ name = "Gudsfile" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.14"
dependencies = [
    "pydantic==2.12.5",
    "questionary==2.1.0",
    "soco==0.30.14",
    "typer==0.23.2; python_version < '3.10'",
    "typer==0.24.1; python_version >= '3.10'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["jukebox", "discstore", "music", "nfc"]

[project.urls]
Repository = "https://github.com/Gudsfile/jukebox"

[project.optional-dependencies]
api = [
    "fastapi==0.128.7; python_version < '3.10'",
    "fastapi==0.135.1; python_version >= '3.10'",
    "uvicorn==0.39.0; python_version < '3.10'",
    "uvicorn==0.41.0; python_version >= '3.10'",
]
ui = [
    "gukebox[api]",
    "fastui==0.9.0 ; python_version >= '3.10'",
    "python-multipart==0.0.22; python_version >= '3.10'",
]
nfc = [
  "pyserial==3.5",
  "spidev==3.8",
  # lgpio wheels not available for Python >= 3.13
  "lgpio==0.2.2.0; python_version < '3.13'",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
    "pytest-mock==3.15.1",
    "ruff==0.15.9",
    "ty==0.0.27",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
extend-exclude = ["pn532/"]

[tool.ruff.lint]
extend-select = [
    "SIM",
    "I",
]

[tool.ty.src]
exclude = ["pn532/"]

[tool.ty.rules]
# Ignoring missing-argument rule for now as it is a false positive for pydantic 2.5.3 (necessary for python <3.10):
# "No arguments provided for required parameters `__pydantic_extra__`, `__pydantic_fields_set__`, `__pydantic_private__`"
# CI/CD will treat this rule as an error for Python >= 3.10.
missing-argument = "warn"

[build-system]
requires = ["uv_build>=0.8.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["jukebox", "discstore", "pn532"]
module-root = ""

[project.scripts]
gukebox = "jukebox.app:main"
jukebox = "jukebox.app:main"
discstore = "discstore.app:main"
jukebox-admin = "jukebox.admin.app:main"
